<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".hide_seek.hide_seek_question_input_1">

    <EditText
        android:id="@+id/edit_question1"
        android:layout_width="270dp"
        android:layout_height="70dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/createQuestion"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.602"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.156" />

    <EditText
        android:id="@+id/input1_choice1"
        android:layout_width="270dp"
        android:layout_height="70dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/choice"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.602"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_question1" />

    <EditText
        android:id="@+id/input1_choice3"
        android:layout_width="270dp"
        android:layout_height="70dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/choice"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/input1_choice2"
        android:layout_width="270dp"
        android:layout_height="70dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/choice"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/input1_choice3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.602"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input1_choice1" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="30dp"
        android:layout_height="40dp"
        android:layout_marginEnd="10dp"
        android:text="@string/falseAnswer"
        android:textColor="@android:color/holo_blue_light"
        app:layout_constraintBottom_toTopOf="@+id/question1_save"
        app:layout_constraintEnd_toStartOf="@+id/input1_choice3"
        app:layout_constraintHorizontal_bias="0.981"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input1_choice2"
        app:layout_constraintVertical_bias="0.572" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="30dp"
        android:layout_height="40dp"
        android:layout_marginEnd="10dp"
        android:text="@string/falseAnswer"
        android:textColor="@android:color/holo_blue_light"
        app:layout_constraintBottom_toTopOf="@+id/input1_choice3"
        app:layout_constraintEnd_toStartOf="@+id/input1_choice2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input1_choice1"
        app:layout_constraintVertical_bias="0.584" />

    <Button
        android:id="@+id/question1_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="保存"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.086"
        app:layout_constraintStart_toStartOf="parent" />
  
</androidx.constraintlayout.widget.ConstraintLayout>